fixe nginx conf

--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -1,5 +1,5 @@
-location PATHTOCHANGE/ {
-    alias ALIASTOCHANGE;
+location PATHTOCHANGE {
+    alias DESTDIRTOCHANGE;
 
     if ($scheme = http) {
         rewrite ^ https://$server_name$request_uri? permanent;
@@ -17,4 +17,13 @@ location PATHTOCHANGE/ {
         fastcgi_param PATH_INFO       $fastcgi_path_info;
         fastcgi_param SCRIPT_FILENAME $request_filename;
     }
+
+    # show YunoHost panel access
+    include conf.d/yunohost_panel.conf.inc;
+}
+
+# prevent useless logs
+location PATHTOCHANGE/favicon.ico {
+  access_log off;
+  log_not_found off;
 }
